methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:3: error: '(' expected but identifier found.
  if estFaceMur() == true
     ^SlugTracking:6: error: '(' expected but identifier found.
  if getColorSol() == Color.green
     ^